@startuml

title __ORDER's Class Diagram__\n

  namespace com.atguigu.factory.simplefactory.pizzastore.order {
    class com.atguigu.factory.simplefactory.pizzastore.order.OrderPizza {
        + OrderPizza()
        + setFactory()
        - getType()
    }
  }
  

  namespace com.atguigu.factory.simplefactory.pizzastore.order {
    class com.atguigu.factory.simplefactory.pizzastore.order.PizzaStore {
        {static} + main()
    }
  }
  

  namespace com.atguigu.factory.simplefactory.pizzastore.order {
    class com.atguigu.factory.simplefactory.pizzastore.order.SimpleFactory {
        + createPizza()
    }
  }
  

  com.atguigu.factory.simplefactory.pizzastore.order.OrderPizza o-- com.atguigu.factory.simplefactory.pizzastore.pizza.Pizza : pizza
  com.atguigu.factory.simplefactory.pizzastore.order.OrderPizza o-- com.atguigu.factory.simplefactory.pizzastore.order.SimpleFactory : simpleFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
